<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/selector_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/selector_favorites"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/notificationFragment"
        android:enabled="true"
        android:icon="@drawable/selector_notifications"
        android:title="@string/notifications"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile"/>
</menu>